--- a/index.html
+++ b/index.html
@@ -10,20 +10,50 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
     <script type = "text/javascript" src="assets/javascript/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/pbkdf2.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+
+
+
 </head>
 <body>
-    <div class="jumbotron">
+    <video autoplay muted loop id="myVideo">
+        <source src="assets/images/storm_raindrops_on_window.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+    </video>
+    <!-- <div class="jumbotron">
         <h1 class="display-4">Hello, world!</h1>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    </div>
-    <nav class="nav nav-pills flex-column flex-sm-row">
-        <a class="flex-sm-fill text-sm-center nav-link active" href="#">Active</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="#">Link</a>
-        <a class="flex-sm-fill text-sm-center nav-link" href="#">Link</a>
-        <a class="flex-sm-fill text-sm-center nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    </div> -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary nav-events">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav mr-auto">
+            <li class="nav-item active nav-event">
+                <a class="nav-link" href="#"><h1>Charlie's Calendar</h1><span class="sr-only">(current)</span></a>
+            </li>
+            </ul>
+            <ul class="navbar-nav mr-auto right">
+            <li class="nav-item nav-event nav-text">
+                <a class="nav-link" href="#">Add an event</a>
+            </li>
+            <li class="nav-item nav-event">
+                <a class="nav-link" href="#">Add a movie</a>
+            </li>
+            <li class="nav-item nav-event">
+                <a class="nav-link" href="#">Add a restaurant</a>
+            </li>
+            </ul>
+        </div>
     </nav>
 
     <div class = "container sign-in">
@@ -46,6 +76,12 @@
                         </div>
                         <div class = "row">
                           <div class = "col-md-6 offset-md-3 sign-form">
+                                <div class="form-row mt-2 exclusive">
+                                    <div class="form-group col-md-12">
+                                    <label for="inputName">Name<span class = "required">*</span></label>
+                                    <input type="email" class="form-control" id="inputName" placeholder="John Smith">
+                                    </div>
+                                </div>
                                 <div class="form-row mt-2">
                                     <div class="form-group col-md-12">
                                     <label for="inputEmail">Email<span class = "required">*</span></label>
@@ -97,6 +133,27 @@
                         </div>
                     </form>
             </div>
+        </div>
+    </div>
+
+    <div class = "container calendar-container mt-2">
+        <div class = "table-responsive">
+            <table class="table table-dark calendar">
+                <thead>
+                    <tr class = "dates">
+                    <th scope="col" id = "day-0-date"></th>
+                    <th scope="col" id = "day-1-date"></th>
+                    <th scope="col" id = "day-2-date"></th>
+                    <th scope="col" id = "day-3-date"></th>
+                    <th scope="col" id = "day-4-date"></th>
+                    <th scope="col" id = "day-5-date"></th>
+                    <th scope="col" id = "day-6-date"></th>
+                    <th scope="col" id = "day-7-date"></th>
+                    </tr>
+                </thead>
+                <tbody id = "scroll-body">
+                </tbody>
+            </table>
         </div>
     </div>
 </body>
