--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             </ul>
             <ul class="navbar-nav mr-auto right">
             <li class="nav-item nav-event nav-text">
-                <a class="nav-link" href="#">Add an event</a>
+                <a class="nav-link" href="#" data-toggle="modal" data-target="#event-modal">Add an event</a>
             </li>
             <li class="nav-item nav-event">
-                <a class="nav-link" href="#">Add a movie</a>
+                <a class="nav-link" href="#" data-toggle="modal" data-target="#movie-modal">Add a movie</a>
             </li>
             <li class="nav-item nav-event">
-                <a class="nav-link" href="#">Add a restaurant</a>
+                <a class="nav-link" href="#" data-toggle="modal" data-target="#restaurant-modal">Add a restaurant</a>
             </li>
             </ul>
         </div>
@@ -138,81 +138,92 @@
     </div>
 
 <div class="container">
-    <div class="card" id="add-event">
-        <div class="card-header">
-            <h4>Add an Event</h4>
-        </div>    
-        <div class="card-body">     
-            <form>
-                <div class="form-group row">
-                <label for="inputTitle" class="col-sm-2 col-form-label">Title</label>
-                    <div class="col-sm-10">
-                    <input type="text" class="form-control" id="event-title" placeholder="Team Meeting">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="inputStart" class="col-sm-2 col-form-label">Start Time</label>
-                    <div class="col-sm-10">
-                    <input type="text" class="form-control" id="start-time" placeholder="10:00">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="inputEnd" class="col-sm-2 col-form-label">End Time</label>
-                    <div class="col-sm-10">
-                    <input type="text" class="form-control" id="end-time" placeholder="11:00">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="selectLocation" class="col-sm-2 col-form-label">Location</label>
-                    <div class="col-sm-10">
-                    <select class="form-control" id="select-location">
-                        <option value="default-location">Use Default Location</option>
-                        <option value="add-location">Add New Location</option>
-                    </select>
-                    </div>
-                </div>
-                <div id="new-address">
+    <div class="modal" tabindex="-1" role="dialog" id="event-modal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add an Event</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
                     <div class="form-group row">
-                        <label for="inputAddress" class="col-sm-3 col-form-label text-right">Address</label>
-                        <div class="col-sm-9">
-                        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        <label for="inputTitle" class="col-sm-2 col-form-label">Title</label>
+                        <div class="col-sm-10">
+                        <input type="text" class="form-control" id="event-title" placeholder="Team Meeting">
                         </div>
                     </div>
+                    <div class="form-group row">
+                        <label for="inputStart" class="col-sm-2 col-form-label">Start Time</label>
+                        <div class="col-sm-10">
+                        <input type="text" class="form-control" id="start-time" placeholder="10:00">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="inputEnd" class="col-sm-2 col-form-label">End Time</label>
+                        <div class="col-sm-10">
+                        <input type="text" class="form-control" id="end-time" placeholder="11:00">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="selectLocation" class="col-sm-2 col-form-label">Location</label>
+                        <div class="col-sm-10">
+                        <select class="form-control" id="select-location">
+                            <option value="default-location">Use Default Location</option>
+                            <option value="add-location">Add New Location</option>
+                        </select>
+                        </div>
+                    </div>
+                    <div id="new-address">
                         <div class="form-group row">
-                        <label for="inputCity" class="col-sm-3 col-form-label text-right">City<span class="required">*</span></label>
-                        <div class="col-sm-9">
-                        <input type="text" class="form-control" id="inputCity" placeholder="Los Angeles"> 
+                            <label for="inputAddress" class="col-sm-3 col-form-label text-right">Address</label>
+                            <div class="col-sm-9">
+                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group row">
-                        <label for="inputState" class="col-sm-3 col-form-label text-right">State<span class = "required">*</span></label>
-                        <div class="col-sm-9">
-                        <input type="text" class="form-control" id="State" placeholder="CA">
+                            <div class="form-group row">
+                            <label for="inputCity" class="col-sm-3 col-form-label text-right">City<span class="required">*</span></label>
+                            <div class="col-sm-9">
+                            <input type="text" class="form-control" id="inputCity" placeholder="Los Angeles"> 
+                            </div>
                         </div>
-                    </div>                                
-                    <div class="form-group row">
-                        <label for="inputZip" class="col-sm-3 col-form-label text-right">Zip</label>
-                        <div class="col-sm-9">
-                        <input type="text" class="form-control" id="inputZip" placeholder="90210">                                    
+                        <div class="form-group row">
+                            <label for="inputState" class="col-sm-3 col-form-label text-right">State<span class = "required">*</span></label>
+                            <div class="col-sm-9">
+                            <input type="text" class="form-control" id="State" placeholder="CA">
+                            </div>
+                        </div>                                
+                        <div class="form-group row">
+                            <label for="inputZip" class="col-sm-3 col-form-label text-right">Zip</label>
+                            <div class="col-sm-9">
+                            <input type="text" class="form-control" id="inputZip" placeholder="90210">                                    
+                            </div>
                         </div>
-                    </div>
-                </div>    
-                <div class="form-group row">
-                    <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary" id="add-event-btn">Add Event</button>
-                    </div>
-                </div>
-            </form>
+                    </div>    
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
         </div>
-    </div>  
+    </div>
 </div>
 
+
 <div class="container">
-    <div class="card" id="add-restaurant">
-        <div class="card-header">
-            <h4>Add a Restaurant</h4>
-        </div>    
-        <div class="card-body">     
+    <div class="modal" tabindex="-1" role="dialog" id="restaurant-modal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add a Restaurant</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        <div class="modal-body">  
             <form>
                 <div class="form-group row">
                 <label for="inputName" class="col-sm-2 col-form-label">Name</label>
@@ -261,22 +272,27 @@
                         </div>
                     </div>
                 </div>    
-                <div class="form-group row">
-                    <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary" id="add-event-btn">Add Event</button>
-                    </div>
-                </div>
-            </form>
+             </form>
         </div>
-    </div>  
+        <div class="modal-footer">
+            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+    </div>
+    </div>
 </div>
 
 <div class="container">
-    <div class="card" id="add-movie">
-        <div class="card-header">
-            <h4>Add a Movie</h4>
-        </div>    
-        <div class="card-body">     
+    <div class="modal" tabindex="-1" role="dialog" id="movie-modal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add a Movie</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">    
             <form>
                 <div class="form-group row">
                 <label for="inputTitle" class="col-sm-2 col-form-label">Title</label>
@@ -299,14 +315,14 @@
                     <input type="text" class="form-control" id="inputZip" placeholder="90210">                                    
                     </div>
                 </div>
-                <div class="form-group row">
-                    <div class="col-sm-10">
-                    <button type="submit" class="btn btn-primary" id="add-event-btn">Add Event</button>
-                    </div>
-                </div>
             </form>
         </div>
-    </div>  
+        <div class="modal-footer">
+            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+    </div>
+</div>
 </div>
 
     <div class = "container calendar-container mt-2">
