--- a/index.html
+++ b/index.html
@@ -5,26 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Calendar App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
     <script type = "text/javascript" src="assets/javascript/app.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/pbkdf2.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.8.2/firebase.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
 
 
 
 </head>
 <body>
-    <video autoplay muted loop id="myVideo">
-        <source src="assets/images/storm_raindrops_on_window.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
+    <video autoplay muted loop id="myVideo" src = "assets/images/storm_raindrops_on_window.mp4" type="video/mp4">
+        <!-- <source src="assets/images/storm_raindrops_on_window.mp4" type="video/mp4"> -->
     </video>
     <!-- <div class="jumbotron">
         <h1 class="display-4">Hello, world!</h1>
@@ -32,6 +28,7 @@
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
     </div> -->
+</div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary nav-events">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
             <li class="nav-item active nav-event">
-                <a class="nav-link" href="#"><h1>Charlie's Calendar</h1><span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#"><h1 id = "name-calendar"></h1><span class="sr-only">(current)</span></a>
             </li>
             </ul>
             <ul class="navbar-nav mr-auto right">
@@ -52,6 +49,9 @@
             <li class="nav-item nav-event">
                 <a class="nav-link" href="#">Add a restaurant</a>
             </li>
+            <li class="nav-item nav-event">
+                <a class="nav-link" id = "sign-out">Sign Out</div>
+            </li>
             </ul>
         </div>
     </nav>
@@ -59,6 +59,7 @@
     <div class = "container sign-in">
         <div class = "row mt-5 justify-content-center sign-opts">
             <div class = "col-md-12">
+
                 <button class = "sign-up-select option">Sign Up</button>
                 &nbsp;
                 <span id = "bar">|</span>
@@ -68,7 +69,7 @@
         </div>
         <div class = "row mt-5 mb-5 justify-content-center">
             <div class = "col-md-12">
-                    <form>
+                    <form id = "form-sign-form">
                         <div class = "form-row">
                             <div class = "form-group col-md-3 offset-md-8">
                                 <span class = "required">*</span>Required
@@ -79,7 +80,7 @@
                                 <div class="form-row mt-2 exclusive">
                                     <div class="form-group col-md-12">
                                     <label for="inputName">Name<span class = "required">*</span></label>
-                                    <input type="email" class="form-control" id="inputName" placeholder="John Smith">
+                                    <input type="text" class="form-control" id="inputName" placeholder="John Smith">
                                     </div>
                                 </div>
                                 <div class="form-row mt-2">
@@ -115,12 +116,12 @@
                                 <div class = "form-row mt-2 exclusive">
                                     <div class="form-group col-md-12">
                                         <label for="inputState">State<span class = "required">*</span></label>
-                                        <input type="text" class="form-control" id="State" placeholder="CA">
+                                        <input type="text" class="form-control" id="inputState" placeholder="CA">
                                     </div>
                                 </div>                                
                                 <div class = "form-row mt-2 exclusive">
                                     <div class="form-group col-md-12">
-                                        <label for="inputZip">Zip</label>
+                                        <label for="inputZip">Zip<span class = "required">*</span></label>
                                         <input type="text" class="form-control" id="inputZip" placeholder="90210">                                    
                                     </div>
                                 </div>
@@ -139,6 +140,7 @@
     <div class = "container calendar-container mt-2">
         <div class = "table-responsive">
             <table class="table table-dark calendar">
+                <caption id = "month-caption"></caption>
                 <thead>
                     <tr class = "dates">
                     <th scope="col" id = "day-0-date"></th>
@@ -156,5 +158,23 @@
             </table>
         </div>
     </div>
+    <div class="modal" id = "myModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" id = "myModal" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <h5 class="modal-title">Error</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+                        <div class="modal-body">
+                        <p></p>
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
