adding image links and remove image files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-    <video autoplay muted loop id="myVideo" src = "assets/images/storm_raindrops_on_window.mp4" type="video/mp4">
+    <video autoplay muted loop id="myVideo" src = "https://firebasestorage.googleapis.com/v0/b/calendar-app-47185.appspot.com/o/storm_raindrops_on_window.mp4?alt=media&token=418e3380-74dc-4baa-8f60-ab81c9a40959" type="video/mp4">
         <!-- <source src="assets/images/storm_raindrops_on_window.mp4" type="video/mp4"> -->
     </video>
     <!-- <div class="jumbotron">
