adding video files back in as well as adding auto scroll to the calendar, where it scrolls automatically to the given time

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-    <video autoplay muted loop id="myVideo" src = "https://firebasestorage.googleapis.com/v0/b/calendar-app-47185.appspot.com/o/storm_raindrops_on_window.mp4?alt=media&token=418e3380-74dc-4baa-8f60-ab81c9a40959" type="video/mp4">
+    <video autoplay muted loop id="myVideo" src = "assets/images/storm_raindrops_on_window.mp4" type="video/mp4">
         <!-- <source src="assets/images/storm_raindrops_on_window.mp4" type="video/mp4"> -->
     </video>
     <!-- <div class="jumbotron">
@@ -29,14 +29,14 @@
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
     </div> -->
 </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary nav-events">
+    <nav class="navbar navbar-expand-lg navbar-dark nav-events">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
             <li class="nav-item active nav-event">
-                <a class="nav-link" href="#"><h1 id = "name-calendar"></h1><span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html"><h1 id = "name-calendar"></h1><span class="sr-only">(current)</span></a>
             </li>
             </ul>
             <ul class="navbar-nav mr-auto right">
