fixed some weather functionality, changed styling and media queries, and added a functional date jumper

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
     <div class = "container calendar-container mt-2">
         <div class = "table-responsive">
             <table class="table table-dark calendar">
-                <caption id = "month-caption"></caption>
+                <caption><form><div id = "month-caption"></div><div id = "date-jump"><input type = "text" id = "date-jump-text"><button type = "submit" class = "date-jump-submit" >Go</button></div></form></caption>          
                 <thead>
                     <tr class = "dates">
                     <th scope="col" id = "day-0-date"></th>
