--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
             <ul class="navbar-nav mr-auto right">
             <li class="nav-item nav-event nav-text">
-                <a class="nav-link" href="#" data-toggle="modal" data-target="#event-modal">Add an event</a>
+                <a class="nav-link" href="#" data-toggle="modal" data-target="#event-modal" id = "add-event-nav">Add an event</a>
             </li>
             <li class="nav-item nav-event">
                 <a class="nav-link" href="#" data-toggle="modal" data-target="#movie-modal">Add a movie</a>
@@ -155,6 +155,12 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label for="inputStart" class="col-sm-3 col-form-label">Event Date</label>
+                        <div class="col-sm-9">
+                        <input type="text" class="form-control" id="event-start-date" placeholder="2019-01-01">
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         <label for="inputStart" class="col-sm-3 col-form-label">Start Time</label>
                         <div class="col-sm-9">
                         <input type="time" class="form-control" id="event-start-time">
@@ -163,7 +169,7 @@
                     <div class="form-group row">
                         <label for="inputEnd" class="col-sm-3 col-form-label">End Time</label>
                         <div class="col-sm-9">
-                        <input type="time" class="form-control" id="end-time">
+                        <input type="time" class="form-control" id="event-end-time">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -179,25 +185,25 @@
                         <div class="form-group row">
                             <label for="inputAddress" class="col-sm-4 col-form-label text-right">Address</label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                            <input type="text" class="form-control" id="event_loc_inputAddress" placeholder="1234 Main St">
                             </div>
                         </div>
                             <div class="form-group row">
                             <label for="inputCity" class="col-sm-4 col-form-label text-right">City<span class="required">*</span></label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputCity" placeholder="Los Angeles"> 
+                            <input type="text" class="form-control" id="event_loc_inputCity" placeholder="Los Angeles"> 
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="inputState" class="col-sm-4 col-form-label text-right">State<span class = "required">*</span></label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="State" placeholder="CA">
+                            <input type="text" class="form-control" id="event_loc_inputState" placeholder="CA">
                             </div>
                         </div>                                
                         <div class="form-group row">
                             <label for="inputZip" class="col-sm-4 col-form-label text-right">Zip</label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputZip" placeholder="90210">                                    
+                            <input type="text" class="form-control" id="event_loc_inputZip" placeholder="90210">                                    
                             </div>
                         </div>
                     </div>    
@@ -214,32 +220,32 @@
                         <div class="form-group row">
                             <label for="inputAddress" class="col-sm-4 col-form-label text-right">Address</label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                            <input type="text" class="form-control" id="event_origin_inputAddress" placeholder="1234 Main St">
                             </div>
                         </div>
                             <div class="form-group row">
                             <label for="inputCity" class="col-sm-4 col-form-label text-right">City<span class="required">*</span></label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputCity" placeholder="Los Angeles"> 
+                            <input type="text" class="form-control" id="event_origin_inputCity" placeholder="Los Angeles"> 
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="inputState" class="col-sm-4 col-form-label text-right">State<span class = "required">*</span></label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="State" placeholder="CA">
+                            <input type="text" class="form-control" id="event_origin_inputState" placeholder="CA">
                             </div>
                         </div>                                
                         <div class="form-group row">
                             <label for="inputZip" class="col-sm-4 col-form-label text-right">Zip</label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputZip" placeholder="90210">                                    
+                            <input type="text" class="form-control" id="event_origin_inputZip" placeholder="90210">                                    
                             </div>
                         </div>
                     </div>    
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" id="event-submit" data-dismiss="modal">Save changes</button>
+                <button type="submit" class="btn btn-primary" id="event-submit" data-dismiss="modal">Submit</button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
@@ -365,14 +371,14 @@
                 <caption><form><div id = "month-caption"></div><div id = "date-jump"><input type = "text" id = "date-jump-text"><button type = "submit" class = "date-jump-submit" >Go</button></div></form></caption>          
                 <thead>
                     <tr class = "dates">
-                    <th scope="col" id = "day-0-date"></th>
-                    <th scope="col" id = "day-1-date"></th>
-                    <th scope="col" id = "day-2-date"></th>
-                    <th scope="col" id = "day-3-date"></th>
-                    <th scope="col" id = "day-4-date"></th>
-                    <th scope="col" id = "day-5-date"></th>
-                    <th scope="col" id = "day-6-date"></th>
-                    <th scope="col" id = "day-7-date"></th>
+                    <th scope="col" id = "day-0-date" data-date = "date"></th>
+                    <th scope="col" id = "day-1-date" data-date = "date"></th>
+                    <th scope="col" id = "day-2-date" data-date = "date"></th>
+                    <th scope="col" id = "day-3-date" data-date = "date"></th>
+                    <th scope="col" id = "day-4-date" data-date = "date"></th>
+                    <th scope="col" id = "day-5-date" data-date = "date"></th>
+                    <th scope="col" id = "day-6-date" data-date = "date"></th>
+                    <th scope="col" id = "day-7-date" data-date = "date"></th>
                     </tr>
                 </thead>
                 <tbody id = "scroll-body">
@@ -389,7 +395,7 @@
                             <span aria-hidden="true">&times;</span>
                         </button>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body" id = "error-body">
                         <p></p>
                         </div>
                         <div class="modal-footer">
