giving credit to Videezy for background videos

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 </div>
 </div>
 
-    <div class = "container calendar-container mt-2">
+    <div class = "container calendar-container mt-2 mb-5">
         <div class = "table-responsive">
             <table class="table table-dark calendar">
                 <caption><form><div id = "month-caption"></div><div id = "date-jump"><input type = "text" id = "date-jump-text"><button type = "submit" class = "date-jump-submit" >Go</button></div></form></caption>          
@@ -384,6 +384,11 @@
                 <tbody id = "scroll-body">
                 </tbody>
             </table>
+        </div>
+    </div>
+    <div class = "row">
+        <div class = "col-md-3 offset-md-9 creidt">
+            <p><a href="http://www.videezy.com">Free Stock Footage by Videezy</a></p>
         </div>
     </div>
     <div class="modal" id = "myModal" tabindex="-1" role="dialog">
