--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
                         </div>
                     </div>
                     <div class="form-group row">
+                        <label for="inputStart" class="col-sm-3 col-form-label">Event Date</label>
+                        <div class="col-sm-9">
+                        <input type="Text" class="form-control" id="event-start-date">
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         <label for="inputStart" class="col-sm-3 col-form-label">Start Time</label>
                         <div class="col-sm-9">
                         <input type="time" class="form-control" id="event-start-time">
@@ -164,7 +170,7 @@
                     <div class="form-group row">
                         <label for="inputEnd" class="col-sm-3 col-form-label">End Time</label>
                         <div class="col-sm-9">
-                        <input type="time" class="form-control" id="end-time">
+                        <input type="time" class="form-control" id="event-end-time">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -180,25 +186,25 @@
                         <div class="form-group row">
                             <label for="inputAddress" class="col-sm-4 col-form-label text-right">Address</label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                            <input type="text" class="form-control" id="event-street" placeholder="1234 Main St">
                             </div>
                         </div>
                             <div class="form-group row">
                             <label for="inputCity" class="col-sm-4 col-form-label text-right">City<span class="required">*</span></label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputCity" placeholder="Los Angeles"> 
+                            <input type="text" class="form-control" id="event-city" placeholder="Los Angeles"> 
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="inputState" class="col-sm-4 col-form-label text-right">State<span class = "required">*</span></label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="State" placeholder="CA">
+                            <input type="text" class="form-control" id="event-state" placeholder="CA">
                             </div>
                         </div>                                
                         <div class="form-group row">
                             <label for="inputZip" class="col-sm-4 col-form-label text-right">Zip</label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputZip" placeholder="90210">                                    
+                            <input type="text" class="form-control" id="event-zip" placeholder="90210">                                    
                             </div>
                         </div>
                     </div>    
@@ -215,25 +221,25 @@
                         <div class="form-group row">
                             <label for="inputAddress" class="col-sm-4 col-form-label text-right">Address</label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                            <input type="text" class="form-control" id="origin-street" placeholder="1234 Main St">
                             </div>
                         </div>
                             <div class="form-group row">
                             <label for="inputCity" class="col-sm-4 col-form-label text-right">City<span class="required">*</span></label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputCity" placeholder="Los Angeles"> 
+                            <input type="text" class="form-control" id="origin-city" placeholder="Los Angeles"> 
                             </div>
                         </div>
                         <div class="form-group row">
                             <label for="inputState" class="col-sm-4 col-form-label text-right">State<span class = "required">*</span></label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="State" placeholder="CA">
+                            <input type="text" class="form-control" id="origin-state" placeholder="CA">
                             </div>
                         </div>                                
                         <div class="form-group row">
                             <label for="inputZip" class="col-sm-4 col-form-label text-right">Zip</label>
                             <div class="col-sm-8">
-                            <input type="text" class="form-control" id="inputZip" placeholder="90210">                                    
+                            <input type="text" class="form-control" id="origin-zip" placeholder="90210">                                    
                             </div>
                         </div>
                     </div>    
